# Django_tutorial

./: .gitignore  README.md  db.sqlite3  pyproject.toml
learning_django/: settings.py  urls.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
