[project]
name = "learning-django"
version = "0.1.0"
description = "this is a beginner tutorial practice of django using the docs"
authors = [
    {name = "DanielNwolu",email = "nwoludaniel.c@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
